# pybrite

./: .gitignore  README.md  REDME.md  Usage.ipynb  build.py  create_dataset.py  dataset.dvc  drive_db.py  get_stats.py  pyproject.toml  set_ips.py
.dvc/: config
pybrite/: setup.py
pybrite/brite_cpp/: BriteMain.cc
pybrite/pybrite/: __init__.py  generator.py  parserbrite.py  paths.py  utils.py
pybrite/pybrite/config/: RTBarabasi.conf  graph.brite  last_seed_file  seed_file
pytop/: __init__.py  parserbrite.py  parserzoo.py  paths.py  setup.py  utils.py
pytop/cutils/: _min_weights.cpp  _min_weights.h  min_weights.cpp  min_weights.pyx
pytop/pytop/: __init__.py  draw.py  generator.py  parserbrite.py  parserzoo.py  utils.py
scripts/: create_dataset.py  set_ips.py
tests/: test_pytop.py
