[tool.poetry]
name = "pytop"
version = "0.1.0"
description = "Topology generator based on Brite"
authors = ["Caio Dadauto <caiodadauto@gmail.com>"]
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
